plan your event submit button alignment fixed

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -556,8 +556,8 @@ footer {
                 font-size: 1.2rem;
                 border-radius: 0;
                 line-height: 25px;
-                background-color: #ff8965;
-                border-color: #ff8965;
+                // background-color: #ff8965;
+                // border-color: #ff8965;
                 border-radius: 0.3rem;
               }
             }
